<resources>
    <string name="app_name">海豚记账本</string>
    <string name="text_record">记</string>
    <string name="text_bill">账单</string>
    <string name="text_chart">图表</string>
    <string name="text_calender">日历</string>
    <string name="text_mine">我的</string>

    <!--登录-->
    <string name="login">登录</string>
    <string name="account">账号</string>
    <string name="password">密码</string>
    <string name="input_hint_account">请输入手机号</string>
    <string name="input_hint_password">请输入密码</string>
    <string name="input_hint_captcha">请输入验证码</string>
    <string name="input_hint_pwd_length">请输入密码（包含数字和字母6&#8211;16位）</string>
    <string name="input_hint_repwd_length">请再次输入密码（包含数字和字母6&#8211;16位）</string>
    <string name="login_now">立即登录</string>
    <string name="forget_pwd">忘记密码？</string>

    <string name="wechat">微信</string>
    <string name="weibo">微博</string>
    <string name="qq">QQ</string>
    <string name="quick_login">快捷登录</string>
    <string name="share_result">分享成功</string>
    <string name="share_error">分享失败</string>
    <string name="share_cancle">分享取消</string>
    <string name="appuninstore">暂无该应用</string>
    <string name="net_error">网络未连接，请连接后重试</string>

    <string name="register">注册</string>
    <string name="quick_register">快捷注册</string>
    <string name="get_captcha">获取验证码</string>
    <string name="register_term">注册即同意账本</string>
    <string name="register_term_text">《服务条款》</string>

    <string name="get_captcha_retry">%1$d 后重新获取</string>

    <!--mine-->
    <string name="mine_login">立即登录</string>
    <string name="text_welcome">欢迎来到海豚账本第%1$d天</string>
    <string name="text_about">关于我们</string>
    <string name="text_share">分享APP给好友</string>
    <string name="text_feedback">意见反馈</string>

    <string name="version">版本</string>
    <string name="official_QQ">官方QQ群</string>
    <string name="business">商务合作</string>
    <string name="version_value">V %1$s</string>
    <string name="other_sort">其他分类</string>
    <string name="sort">排序</string>
    <string name="save">保存</string>
    <string name="complete">完成</string>
    <string name="cancel">取消</string>
    <string name="share_notebook">共享账本</string>
    <string name="exit">退出</string>
    <string name="confirm">确定</string>
    <string name="longclicksort">长按排序且可删除</string>
    <string name="text_callback">意见反馈</string>
    <string name="text_findpassword">找回密码</string>
    <string name="share_tips">家人,朋友生意伙伴都在用，好用！</string>
    <string name="wx_welcome">微信邀请成员</string>
    <string name="modify">编辑</string>
    <string name="detail_bill">详情</string>

    <!--用户中心-->
    <string name="uc_modify_nickname">修改昵称</string>
    <string name="uc_nick_isnot_null">昵称不能为空！</string>
    <string name="uc_please_input_nickname">请输入昵称</string>
    <string name="uc_account_manager">账号管理</string>
    <string name="exit_success">退出成功</string>
    <string name="uc_need_cameral">需要摄像头权限</string>
    <string name="uc_please_select_photo">请选择图片</string>
    <string name="uc_head">头像</string>
    <string name="uc_nick_name">昵称</string>
    <string name="uc_exit_load">退出登录</string>
    <string name="month">月</string>
    <string name="year">年</string>
    <string name="total">总</string>
    <string name="please_select">请选择</string>
    <string name="type_one">日常</string>
    <string name="type_two">装修</string>
    <string name="type_three">旅行</string>
    <string name="type_four">校园</string>
    <string name="bill_detail">账单明细</string>
    <string name="editer">编辑</string>
    <string name="immedite_update">立即升级</string>
    <string name="immedite_login">立即登录</string>
    <string name="uc_modify_pwd">修改密码</string>
    <string name="forgetpwd">忘记密码</string>
    <string name="uc_user_protocol">用户协议</string>
    <string name="testText">1234</string>
    <string name="not_detail_tip">暂无明细，赶紧去记录第一笔账吧~</string>
    <string name="saywhat">说点什么...</string>
    <string name="no_per">您没有操作其他用户账本的权限!</string>
    <string name="please_input_pwd">请您输入包含数字和字母的6-16位密码</string>

    <item name="editer" type="id">编辑</item>
</resources>
