<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cn.ftoutiao.account.android.utils.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:background="@color/color_f8f8f8"
        android:layout_height="match_parent">

        <RelativeLayout
            android:id="@+id/rl_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@drawable/bg_with_top_bottom_border">

            <LinearLayout
                android:id="@+id/ll_input_phone"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:text="@string/login"
                    android:textColor="#666666"
                    android:textSize="14dp" />

                <cn.ftoutiao.account.android.widget.ClearEditText
                    android:id="@+id/et_phone"
                    style="@style/InputTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="18dp"
                    android:layout_weight="1"
                    android:hint="@string/input_hint_account"
                    android:inputType="phone"
                    android:maxLength="11"
                    app:clearButtonDrawable="@drawable/clear_button"
                    app:clearButtonMode="whileEditing" />
            </LinearLayout>

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/ll_input_phone"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:background="@drawable/divider_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_below="@id/divider"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="18dp"
                    android:text="@string/password"
                    android:textColor="#666666"
                    android:textSize="14dp" />

                <cn.ftoutiao.account.android.widget.ClearEditText
                    android:id="@+id/et_pwd"
                    style="@style/InputTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="26dp"
                    android:layout_marginRight="18dp"
                    android:layout_weight="1"
                    android:hint="@string/input_hint_password"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    app:clearButtonDrawable="@drawable/clear_button"
                    app:clearButtonMode="whileEditing" />

                <CheckBox
                    android:id="@+id/cb_show_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:button="@drawable/ic_pwd_selector" />
            </LinearLayout>

        </RelativeLayout>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/com_height"
            android:layout_below="@id/rl_input"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            style="?android:attr/borderlessButtonStyle"
            android:layout_marginTop="21dp"
            android:background="@drawable/bg_btn_selector"
            android:enabled="false"
            android:gravity="center"
            android:textSize="@dimen/sp_14"
            android:text="@string/login_now"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/btn_login"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/forget_pwd"
            android:textColor="#666666"
            android:textSize="13dp" />

        <LinearLayout
            android:id="@+id/ll_login"
            android:paddingLeft="20dp"
            android:paddingRight="@dimen/padding_20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="35dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_wechat"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="15dp"
                android:drawableTop="@drawable/ic_wechat_selector"
                android:gravity="center"
                android:text="@string/wechat"
                android:textColor="#333333"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_qq"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="15dp"
                android:drawableTop="@drawable/ic_qq_selector"
                android:gravity="center"
                android:text="@string/qq"
                android:textColor="#333333"
                android:textSize="12dp" />

            <TextView
                android:id="@+id/tv_weibo"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:drawablePadding="15dp"
                android:drawableTop="@drawable/ic_weibo_selector"
                android:gravity="center"
                android:text="@string/weibo"
                android:textColor="#333333"
                android:textSize="12dp" />
        </LinearLayout>

        <RelativeLayout
            android:paddingLeft="15dp"
            android:paddingRight="@dimen/padding_15dp"
            android:layout_width="match_parent"
            android:layout_marginBottom="3dp"
            android:layout_height="wrap_content"
            android:layout_above="@id/ll_login">

            <TextView
                android:id="@+id/tv_quick_login_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:text="@string/quick_login"
                android:textColor="#999999"
                android:textSize="12dp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/tv_quick_login_label"
                android:background="#e0e0e0" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@id/tv_quick_login_label"
                android:background="#e0e0e0" />

        </RelativeLayout>

    </RelativeLayout>
</LinearLayout>