<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/line_hot_space"
            android:layout_width="match_parent"
            android:layout_height="175dp"
            android:background="@drawable/mine_bg"
            android:gravity="center"
            android:orientation="vertical">

            <cn.ftoutiao.account.android.activity.mine.view.CircleImageView
                android:id="@+id/iv_avatar"
                android:layout_width="76dp"
                android:layout_height="76dp"
                app:civ_border_color="#766f7f"
                app:civ_border_width="2dp"
                android:src="@drawable/ic_avatar"
                 />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/immedite_login"
                android:textColor="@android:color/white"
                android:textSize="17sp" />

            <TextView
                android:id="@+id/tv_exit_days"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="6dp"
                android:textColor="#80ffffff"
                android:textSize="12sp" />

        </LinearLayout>

        <TextView
            android:id="@+id/tv_about"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/padding_8dp"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/ic_about"
            android:drawablePadding="@dimen/padding_10dp"
            android:drawableRight="@drawable/ic_entry"
            android:paddingBottom="@dimen/padding_13dp"
            android:paddingLeft="@dimen/padding_16dp"
            android:paddingRight="@dimen/padding_16dp"
            android:paddingTop="@dimen/padding_13dp"
            android:text="@string/text_about"
            android:textColor="@color/text_666666"
            android:textSize="@dimen/text_14dp" />


        <TextView
            android:id="@+id/tv_callback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/mine_callback"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_entry"
            android:paddingBottom="@dimen/padding_13dp"
            android:paddingLeft="@dimen/padding_16dp"
            android:paddingRight="@dimen/padding_16dp"
            android:paddingTop="@dimen/padding_13dp"
            android:text="@string/text_callback"
            android:textColor="@color/text_666666"
            android:textSize="@dimen/text_14dp"
            android:visibility="gone" />


        <TextView
            android:id="@+id/tv_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@android:color/white"
            android:drawableLeft="@drawable/ic_share"
            android:drawablePadding="10dp"
            android:drawableRight="@drawable/ic_entry"
            android:paddingBottom="@dimen/padding_13dp"
            android:paddingLeft="@dimen/padding_16dp"
            android:paddingRight="@dimen/padding_16dp"
            android:paddingTop="@dimen/padding_13dp"
            android:text="@string/text_share"
            android:textColor="@color/text_666666"
            android:textSize="@dimen/text_14dp" />

    </LinearLayout>

</ScrollView>