<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <cn.ftoutiao.account.android.utils.TopBar
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <RelativeLayout
            android:id="@+id/rl_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/toolbar"
            android:background="@drawable/bg_with_top_bottom_border">

            <cn.ftoutiao.account.android.widget.ClearEditText
                android:id="@+id/et_phone"
                style="@style/InputTextStyle"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_marginLeft="18dp"
                android:layout_marginRight="18dp"
                android:hint="@string/input_hint_account"
                android:inputType="phone"
                android:maxLength="11"
                app:clearButtonDrawable="@drawable/clear_button"
                app:clearButtonMode="whileEditing" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/et_phone"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:background="@drawable/divider_vertical" />



            <LinearLayout
                android:id="@+id/ll_captcha"
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_below="@id/divider"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <cn.ftoutiao.account.android.widget.ClearEditText
                    android:id="@+id/et_captcha"
                    style="@style/InputTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_weight="1"
                    android:hint="@string/input_hint_captcha"
                    android:inputType="number"
                    app:clearButtonDrawable="@drawable/clear_button"
                    app:clearButtonMode="whileEditing" />

                <Button
                    android:id="@+id/btn_get_captcha"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginRight="16dp"
                    android:background="@drawable/bg_btn_with_green_border"
                    android:button="@drawable/ic_pwd_selector"
                    android:padding="8dp"
                    android:text="@string/get_captcha"
                    android:textColor="#4aca9a"
                    android:textSize="12dp" />
            </LinearLayout>

            <View
                android:id="@+id/divider_2"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_below="@id/ll_captcha"
                android:layout_marginLeft="14dp"
                android:layout_marginRight="14dp"
                android:background="@drawable/divider_vertical" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:layout_below="@id/divider_2"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <cn.ftoutiao.account.android.widget.ClearEditText
                    android:id="@+id/et_pwd"
                    style="@style/InputTextStyle"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="18dp"
                    android:layout_marginRight="18dp"
                    android:layout_weight="1"
                    android:hint="@string/input_hint_pwd_length"
                    android:inputType="textPassword"
                    android:maxLength="16"
                    app:clearButtonDrawable="@drawable/clear_button"
                    app:clearButtonMode="whileEditing" />

                <CheckBox
                    android:id="@+id/cb_show_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:button="@drawable/ic_pwd_selector" />
            </LinearLayout>
        </RelativeLayout>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="@dimen/com_height"
            android:layout_below="@id/rl_input"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="21dp"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/bg_btn_selector"
            android:enabled="false"
            android:gravity="center"
            android:text="提交"
            android:textColor="@android:color/white" />


    </RelativeLayout>

</LinearLayout>